# apt-mirror-minimal

./: Cargo.toml
src/: main.rs
