[package]
name = "apt-mirror-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
bytes = "1.3"
log = "0.4"
env_logger = "0.10"
flate2 = "1.0"
xz2 = "0.1"

